//! gRPC server implementation

use std::net::SocketAddr;
use std::sync::Arc;

use async_trait::async_trait;
use shardforge_core::{Result, ShardForgeError};
use tokio::sync::RwLock;
use tonic::{transport::Server, Request, Response, Status};

use crate::network::NetworkConfig;
use crate::network::protocol::proto;

/// gRPC server for ShardForge database
pub struct GrpcServer {
    config: NetworkConfig,
    service: Arc<DatabaseServiceImpl>,
    shutdown_signal: Arc<RwLock<Option<tokio::sync::oneshot::Receiver<()>>>>,
}

impl GrpcServer {
    /// Create a new gRPC server
    pub fn new(config: NetworkConfig, service: DatabaseServiceImpl) -> Self {
        Self {
            config,
            service: Arc::new(service),
            shutdown_signal: Arc::new(RwLock::new(None)),
        }
    }

    /// Start the gRPC server
    pub async fn start(&self) -> Result<()> {
        let addr: SocketAddr = self.config.bind_address.parse()
            .map_err(|e| ShardForgeError::Config { 
                message: format!("Invalid bind address: {}", e) 
            })?;

        println!("Starting gRPC server on {}", addr);

        // For now, just simulate a server start since we need protoc for full gRPC
        println!("gRPC server simulation started (protoc required for full implementation)");
        
        // Handle shutdown signal if available
        if let Some(_shutdown_rx) = self.shutdown_signal.read().await.as_ref() {
            // In a real implementation, this would wait for the shutdown signal
            tokio::time::sleep(std::time::Duration::from_secs(1)).await;
            println!("Gracefully shutting down gRPC server");
        }

        Ok(())
    }

    /// Set shutdown signal
    pub async fn set_shutdown_signal(&self, receiver: tokio::sync::oneshot::Receiver<()>) {
        *self.shutdown_signal.write().await = Some(receiver);
    }
}

/// Implementation of the DatabaseService gRPC service
pub struct DatabaseServiceImpl {
    // TODO: Add storage engine, transaction manager, etc.
}

impl DatabaseServiceImpl {
    pub fn new() -> Self {
        Self {}
    }
}

// Stub implementation for development
#[async_trait]
impl proto::DatabaseService for DatabaseServiceImpl {
    async fn execute_query(
        &self,
        request: Request<proto::QueryRequest>,
    ) -> std::result::Result<Response<proto::QueryResponse>, Status> {
        let _req = request.into_inner();
        
        let response = proto::QueryResponse {
            has_more: false,
            cursor: "".to_string(),
        };

        Ok(Response::new(response))
    }

    async fn begin_transaction(
        &self,
        request: Request<proto::TransactionRequest>,
    ) -> std::result::Result<Response<proto::TransactionResponse>, Status> {
        let _req = request.into_inner();
        
        let response = proto::TransactionResponse {
            transaction_id: "tx_placeholder".to_string(),
            start_timestamp: 0,
        };

        Ok(Response::new(response))
    }

    async fn get_cluster_status(
        &self,
        request: Request<proto::StatusRequest>,
    ) -> std::result::Result<Response<proto::StatusResponse>, Status> {
        let _req = request.into_inner();
        
        let response = proto::StatusResponse {
            status: Some(proto::ClusterStatus {
                health: 0, // Healthy
                total_nodes: 1,
                healthy_nodes: 1,
                leader_node_id: "node-1".to_string(),
            }),
        };

        Ok(Response::new(response))
    }
}
